# rename-eh

./: .gitignore  .stylish-haskell.yaml  README.md  rename-eh.cabal
app/: Main.hs
src/: ExPanda.hs  ParsePath.hs  test2.hs
test/: Spec.hs  test2.txt
