name:                rename-eh
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lauzi/rename-eh#readme
license:             BSD3
license-file:        LICENSE
author:              LauZi
maintainer:          st61112@gmail.com
copyright:           2017 LauZi
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ParsePath
  build-depends:       base >= 4.7 && < 5
                     , regex-applicative
  default-language:    Haskell2010

executable rename-eh-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rename-eh
                     , wreq
                     , lens
                     , bytestring
                     , http-client
                     , http-client-tls
                     , haskeline
  default-language:    Haskell2010

test-suite rename-eh-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rename-eh
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lauzi/rename-eh
